--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
     <style>
     body {
-        background-color: aliceblue;
-        color:#fff;
+        background-color: rgb(45, 137, 218);
+        color:rgb(233, 15, 15);
         text-align: center;
-        text-decoration-color: blueviolet;
     }
 
     </style>
