--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <body>
         <h1>This is my first github website</h1>
-        <h2>I made it through <a href="https://www.youtube.com/watch?v=bwThn0rxv7M">here</a></h2>
+        <p>I made it through <a href="https://www.youtube.com/watch?v=bwThn0rxv7M">here</a></p>
 
     </body>
 
