--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
         <h1>This is my first github website</h1>
         <p>I made it through <a href="https://www.youtube.com/watch?v=bwThn0rxv7M">here</a></p>
 
+        <p> 
+            My name is Anjay. I am a boy, 19, in college, on a road in life. 
+            I am from Singapore, the city of clean streets & gumless benches.
+            I go to Vanderbilt,kids aren't as happy as said. 
+        </p>
+
     </body>
 
     <style>
     body {
-        background-color: rgb(45, 137, 218);
-        color:rgb(233, 15, 15);
+        background-color: rgb(6, 37, 65);
+        color:rgb(162, 186, 190);
         text-align: center;
     }
 
