--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     </title>
 
     <body>
-        <h1>This is my first github website</h1>
-        <p>I made it through <a href="https://www.youtube.com/watch?v=bwThn0rxv7M">here</a></p>
+        <h1>This is my first GitHub website</h1>
+        <p>I made it through <a href="https://www.youtube.com/watch?v=bwThn0rxv7M">this website</a></p>
 
         <p> 
-            My name is Anjay. I am a boy, 19, in college, on a road in life. 
-            I am from Singapore, the city of clean streets & gumless benches.
+            My name is Anjay. I am a boy, 19, in college, on a road in life. <br>
+            I am from Singapore, the city of clean streets & gumless benches. <br>
             I go to Vanderbilt,kids aren't as happy as said. 
         </p>
 
