--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
         <p> 
             My name is Anjay. I am a boy, 19, in college, on a road in life. <br>
             I am from Singapore, the city of clean streets & gumless benches. <br>
-            I go to Vanderbilt,kids aren't as happy as said. 
+            I go to Vanderbilt, kids aren't as happy as said. <br>
+            But that doesn't mean that life isn't good
+
+            <br> <br> <br> 
+
+            I believe in meditation & sleeping 7.5 hours.
+            <br> 
+            I don't meditate or sleep 7.5 hours regularly. 
+            <br>
+            Things are like that sometimes
+    
         </p>
 
     </body>
