--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <body>
         <h1>This is my first GitHub website</h1>
-        <p>I made it through <a href="https://www.youtube.com/watch?v=bwThn0rxv7M">this website</a></p>
+        <p>I made it through <a href="https://www.youtube.com/watch?v=bwThn0rxv7M">this video</a></p>
 
         <p> 
             My name is Anjay. I am a boy, 19, in college, on a road in life. <br>
