--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
             I don't meditate or sleep 7.5 hours regularly. 
             <br>
             Things are like that sometimes
+
+            <br> <br> <br> 
     
         </p>
+
+        <img src="DSC_0694.jpeg" alt="Me" width="200"
+         height="80">
 
     </body>
 
