--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     
         </p>
 
-        <img src="DSC_0694.jpeg" alt="Me" width="130"
-         height="100">
+        <img src="DSC_0694.jpeg" alt="in a field" width="450"
+         height="300">
 
     </body>
 
