--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
             Things are like that sometimes
 
             <br> <br> <br> 
+
+            
     
         </p>
 
         <img src="DSC_0694.jpeg" alt="Me" width="200"
          height="80">
+
+         <p> See more at <a href="https://anjay1101.github.io/helloWorld>this page"></a></p>
 
     </body>
 
