--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="DSC_0694.jpeg" alt="in a field" width="450"
          height="300">
 
-         <p> See more at <a href="https://anjay1101.github.io/helloWorld>this page"></a></p>
+         <p> See more at <a href="https://anjay1101.github.io/helloWorld>">this page></a></p>
 
     </body>
 
