--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         First website
     </title>
 
-    <body>
+    <body>p
         <h1>This is my first GitHub website</h1>
         <p>I made it through <a href="https://www.youtube.com/watch?v=bwThn0rxv7M">this video</a></p>
 
@@ -30,7 +30,7 @@
         <img src="DSC_0694.jpeg" alt="Me" width="200"
          height="80">
 
-         <p> See more at <a href="https://anjay1101.github.io/helloWorld>this page"></a></p>
+         <p> See more at <a href="https://anjay1101.github.io/poetry">here</a></p>
 
     </body>
 
