--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          height="300">
 
 
-         <p> See more at <a href="https://anjay1101.github.io/poetry">here</a></p>
+         <p> See more <a href="https://anjay1101.github.io/poetry">here</a></p>
 
     </body>
 
