--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         First website
     </title>
 
-    <body>p
+    <body>
         <h1>This is my first GitHub website</h1>
         <p>I made it through <a href="https://www.youtube.com/watch?v=bwThn0rxv7M">this video</a></p>
 
