added link to blog

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <img src="DSC_0694.jpeg" alt="in a field" width="450"
          height="300">
 
-
-         <p> See more <a href="https://anjay1101.github.io/poetry">here</a></p>
+         <p> Visit my blog <a href="https://thoughtsofanjay.wordpress.com">here</a></p>
+         <p> See my poetry <a href="https://anjay1101.github.io/poetry">here</a></p>
 
     </body>
 
